# Email-thread-analysis-chatbot-rag

./: .gitignore  README.md  docker-compose.yml  dockerfile  indexer.py  ingest.py  pyproject.toml  requirements.txt  show_threads.py
backend/: main.py
backend/store/: embeddings.npy  faiss_index.index
data/: add_threads_labels.py  preprocessing.py  sample_enron_slice.csv  sliced_emails_labeled.csv  thread_map.json
ui/: frontend.py
